Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74307

***Panic Report*** Floating QDockWidget using QOpenGLWidget is Broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.4, 5.14.0 Alpha
    • 5.12.1
    • GUI: OpenGL
    • None
    • Windows
    • 1d1dcd8d6c64a35b94b351f72cc447771834df49 (qt/qtbase/5.12)

    Description

      I understand that desktop applications might not be top priority but this bug fix is overdue. 

      It seems like the OpenGL context is being damaged and/or destroyed when a QDockWidget is floating. Completely disabling the paint/update of the QOpenGLWidget.

      Please, see the modified cube example provided.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-74307
          # Subject Branch Project Status CR V

          Activity

            People

              lagocs Laszlo Agocs
              neosettler neosettler
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes