src/widgets/kernel/qopenglwidget.cpp
@@ -1448,7 +1448,8 @@ bool QOpenGLWidget::event(QEvent *e)
         {
             // Special case: did grabFramebuffer() for a hidden widget that then became visible.
             // Recreate all resources since the context now needs to share with the TLW's.
-            d->reset();
+            if (!qGuiApp->testAttribute(Qt::AA_ShareOpenGLContexts))
+                d->reset();
         }
         if (!d->initialized && !size().isEmpty() && window()->windowHandle()) {
             d->initialize();
